# Heris-agent

./: .gitignore  MANIFEST.in  PUSH_prompt.md  README.md  README_CN.md  Slackin_prompt.md  gomoku.cpp  package-lock.json  package.json  pyproject.toml  task.md
docs/: DEVELOPMENT_GUIDE.md  DEVELOPMENT_GUIDE_CN.md  PRODUCTION_GUIDE.md  PRODUCTION_GUIDE_CN.md
examples/: 01_basic_tools.py  02_simple_agent.py  03_session_notes.py  04_full_agent.py  05_provider_selection.py  06_tool_schema_demo.py  README.md  README_CN.md
heris/: __init__.py  agent.py  cli.py  config.py  logger.py  modes.py
heris/Todo/: __init__.py  todo_tool.py  todomanager.py
heris/acp/: __init__.py  server.py
heris/agents/: __init__.py  agent.py
heris/commands/: __init__.py  clear.py  cost.py  help.py
heris/config/: config-example.yaml  system_prompt.md
heris/llm/: anthropic_client.py  base.py  llm_wrapper.py  openai_client.py
heris/schema/: __init__.py  schema.py
heris/subagent/: DESIGN.md  README.md  __init__.py  builtin.py  loader.py  prompt.md  registry.py  runner.py  subagents.py  tool.py  types.py
heris/tools/: __init__.py  base.py  bash_tool.py  file_tools.py  http_tool.py  (+4 more)
scripts/: setup-config.ps1  setup-config.sh
src/: index.ts
tests/: test_acp.py  test_agent.py  test_agent_persona.py  test_art.py  test_bash_tool.py  test_clear_command.py  test_file_tools_security.py  test_integration.py  test_llm.py  test_llm_clients.py  test_markdown_links.py  test_mcp.py  test_mode_tools.py  test_model_cli_integration.py  test_model_command.py  test_modes.py  test_note_tool.py  test_session_integration.py  test_skill_loader.py  test_skill_tool.py  test_subagent.py  test_subagent_v2.py  test_terminal_utils.py  test_tool_schema.py  test_tools.py
(+32 files in other folders)
